# yolo-openvino

./: CMakeLists.txt  README.md
include/yolo/: model-utils.h  yolo.h
src/bytetrack/: BYTETracker.cpp
src/yolo/: model-utils.cpp  yolo.cpp
